tests/fail/vec_fields.stderr
error[E0063]: missing field `b` in initializer of `Foo`
  --> $DIR/vec_fields.rs:15:42
   |
15 |   let crafted = handcraft!(Baz { v: vec![Foo { a: 0 }] });
   |                                          ^^^ missing `b`
